Fix animation z-index problem

--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,7 @@ header {
     padding: 1em;
     background-color: var(--clr-light);
     box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
 }
 
 .home__link {
@@ -228,6 +229,7 @@ section.intro {
     overflow: hidden;
     margin: 20px;
     box-shadow: 2px 2px 22px rgba(0, 0, 0, 0.1);
+    z-index: 1;
 }
 
 .personalPhoto img {
@@ -239,6 +241,7 @@ section.intro {
     text-align: left;
     width: 50vw;
     max-width: 600px;
+    z-index: 1;
 }
 
 .helloText {
